--- a/exercise_code.Rmd
+++ b/exercise_code.Rmd
@@ -216,7 +216,8 @@ employment_index_data <- clean_data %>%
 # choosing different upper and lower goalpost limits in the previous step, when 
 # I transformed the variables to scales of 0 to 1. 
 
-SES_index_data <- inner_join(income_index_data, education_index_data, by = "municipality") %>%
+SES_index_data <- inner_join(income_index_data, education_index_data, 
+                             by = "municipality") %>%
   inner_join(employment_index_data, by = "municipality") %>%
   mutate(SES_index = (income_index * education_index * employment_index)^(1/3)) %>%
   select(municipality, SES_index) 
@@ -226,6 +227,10 @@ SES_index_data <- inner_join(income_index_data, education_index_data, by = "muni
 ```
 
 ```{r grouping_towns}
+# I used Jenks natural break optimization to generate natural breaks in the data 
+# that minimize each groups' average deviation from the mean, while maximizing 
+# each group's deviation from the means of other groups.
+
 getJenksBreaks(SES_index_data$SES_index, 5, subset = NULL)
 # Natural breaks at: 0.05551206 0.33443688 0.48107848 0.63525565 0.86693081
 
@@ -265,5 +270,28 @@ final_data <- SES_index_data %>%
                           SES_index > 0.48107848 &
                           SES_index <= 0.63525565 ~ "High SES",
                           SES_index > 0.63525565  ~ "Highest SES"))
+```
+
+```{r explore_SES_index}
+
+summary(final_data$SES_index)
+# SES Index ranges from .06 to .87 (on a scale of 0-1)
+
+# Visualizing the spread of SES index:
+SES_index_plot <- final_data %>%
+  ggplot(aes(x = SES_index)) +
+  geom_histogram(aes(y = stat(count)/sum(stat(count))),
+                 bins = 70) +
+  labs(title = "Distribution of SES Index Scores",
+       x = "SES Index Score",
+       y = "Percent of Connecticut Towns") +
+  scale_y_continuous(labels = scales::percent_format()) +
+  scale_x_continuous(labels = scales::percent_format())
+  theme_classic()
+  
+quantile(final_data$SES_index, probs = c(0.05, 0.95))
+
+# 90% of towns have SES index scores between .21 and .69.
+
 ```
 
